# motor-driver

./: .gitignore  .gitmodules  README.md
firmware/: CMakeLists.txt  CMakePresets.json
pcb/: .gitmodules  can.SchDoc  mcu.SchDoc  motor.SchDoc  motor_driver.PrjPcb  motor_driver.PrjPcbStructure  top.SchDoc
